--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
           <h2 class="visually-hidden">Qualities</h2>
           <ul class="qualities-list list">
             <li class="qualities-item">
+              <div class="qualities-icon-box">
+                <svg class="qualities-icon" width="64" height="64">
+                  <use href="images/symbol-defs.svg#icon-Group"></use>
+                </svg>
+              </div>
               <h3 class="qualities-subtitle subtitle">Strategy</h3>
               <p class="qualities-description description">
                 Our goal is to identify the business problem to walk away with
@@ -76,6 +81,11 @@
               </p>
             </li>
             <li class="qualities-item">
+              <div class="qualities-icon-box">
+                <svg class="qualities-icon" width="64" height="64">
+                  <use href="images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="qualities-subtitle subtitle">Punctuality</h3>
               <p class="qualities-description description">
                 Bring the key message to the brand's audience for the best price
@@ -83,6 +93,11 @@
               </p>
             </li>
             <li class="qualities-item">
+              <div class="qualities-icon-box">
+                <svg class="qualities-icon" width="64" height="64">
+                  <use href="images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="qualities-subtitle subtitle">Diligence</h3>
               <p class="qualities-description description">
                 Research and confirm brands that present the strongest digital
@@ -90,6 +105,11 @@
               </p>
             </li>
             <li class="qualities-item">
+              <div class="qualities-icon-box">
+                <svg class="qualities-icon" width="64" height="64">
+                  <use href="images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="qualities-subtitle subtitle">Technologies</h3>
               <p class="qualities-description description">
                 Design practice focused on digital experiences. We bring forth a
@@ -147,8 +167,46 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitle subtitle">Mark Guerrero</h3>
-              <p class="team-description description">Product Designer</p>
+              <div class="team-content">
+                <h3 class="team-subtitle subtitle">Mark Guerrero</h3>
+                <p class="team-description description">Product Designer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -157,8 +215,46 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitle subtitle">Tom Ford</h3>
-              <p class="team-description description">Frontend Developer</p>
+              <div class="team-content">
+                <h3 class="team-subtitle subtitle">Tom Ford</h3>
+                <p class="team-description description">Frontend Developer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -167,8 +263,46 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitle subtitle">Camila Garcia</h3>
-              <p class="team-description description">Marketing</p>
+              <div class="team-content">
+                <h3 class="team-subtitle subtitle">Camila Garcia</h3>
+                <p class="team-description description">Marketing</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -177,21 +311,147 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitle subtitle">Daniel Wilson</h3>
-              <p class="team-description description">UI Designer</p>
+              <div class="team-content">
+                <h3 class="team-subtitle subtitle">Daniel Wilson</h3>
+                <p class="team-description description">UI Designer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
       </section>
       <!--/Section Team-->
+
+      <!--Customers-->
+      <section class="customers section">
+        <div class="container">
+          <h2 class="customers-title title">Customers</h2>
+          <ul class="customers-list list">
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-list-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-list-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-list-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-list-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-list-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo-5"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-list-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo-6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!--/Customers-->
     </main>
     <footer class="footer">
       <div class="footer-container container">
-        <a href="/" class="footer-logo logo link"> <span>Web</span> Studio </a>
-        <p class="footer-description description">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-info">
+          <a href="/" class="footer-logo logo"> <span>Web</span> Studio </a>
+          <p class="footer-description description">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social">
+          <h4 class="footer-social-title">Social media</h4>
+          <ul class="footer-social-list list">
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-social-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-social-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-social-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-social-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
