--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
     <header class="header">
       <div class="container main-nav">
         <nav class="header-nav">
-          <a href="/" class="header-logo link logo"> <span>Web</span>Studio </a>
+          <a href="/" class="header-logo logo"> <span>Web</span>Studio </a>
 
           <ul class="header-list list">
             <li class="header-item item">
@@ -80,112 +80,132 @@
           </ul>
           <ul class="projects-list list">
             <li class="projects-items">
-              <img
-                src="./images/project-1.jpg"
-                alt="project picture"
-                width="360"
-                height="300"
-              />
-              <div class="project-content">
-                <h3 class="projects-subtitle subtitle">
-                  Banking App Interface Concept
-                </h3>
-                <p class="projects-description description">App</p>
-              </div>
+              <a href="#" class="projects-link">
+                <img
+                  src="./images/project-1.jpg"
+                  alt="project picture"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-content">
+                  <h3 class="projects-subtitle subtitle">
+                    Banking App Interface Concept
+                  </h3>
+                  <p class="projects-description description">App</p>
+                </div></a
+              >
             </li>
             <li class="projects-items">
-              <img
-                src="./images/project-2.jpg"
-                alt="project picture"
-                width="360"
-                height="300"
-              />
-              <div class="project-content">
-                <h3 class="projects-subtitle subtitle">Cashless Payment</h3>
-                <p class="projects-description description">Marketing</p>
-              </div>
+              <a href="#" class="projects-link">
+                <img
+                  src="./images/project-2.jpg"
+                  alt="project picture"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-content">
+                  <h3 class="projects-subtitle subtitle">Cashless Payment</h3>
+                  <p class="projects-description description">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="projects-items">
-              <img
-                src="./images/project-3.jpg"
-                alt="project picture"
-                width="360"
-                height="300"
-              />
-              <div class="project-content">
-                <h3 class="projects-subtitle subtitle">Meditaion App</h3>
-                <p class="projects-description description">App</p>
-              </div>
+              <a href="#" class="projects-link">
+                <img
+                  src="./images/project-3.jpg"
+                  alt="project picture"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-content">
+                  <h3 class="projects-subtitle subtitle">Meditaion App</h3>
+                  <p class="projects-description description">App</p>
+                </div>
+              </a>
             </li>
             <li class="projects-items">
-              <img
-                src="./images/project-4.jpg"
-                alt="project picture"
-                width="360"
-                height="300"
-              />
-              <div class="project-content">
-                <h3 class="projects-subtitle subtitle">Taxi Service</h3>
-                <p class="projects-description description">Marketing</p>
-              </div>
+              <a href="#" class="projects-link">
+                <img
+                  src="./images/project-4.jpg"
+                  alt="project picture"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-content">
+                  <h3 class="projects-subtitle subtitle">Taxi Service</h3>
+                  <p class="projects-description description">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="projects-items">
-              <img
-                src="./images/project-5.jpg"
-                alt="project picture"
-                width="360"
-                height="300"
-              />
-              <div class="project-content">
-                <h3 class="projects-subtitle subtitle">Screen Illustrations</h3>
-                <p class="projects-description description">Design</p>
-              </div>
+              <a href="#" class="projects-link">
+                <img
+                  src="./images/project-5.jpg"
+                  alt="project picture"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-content">
+                  <h3 class="projects-subtitle subtitle">
+                    Screen Illustrations
+                  </h3>
+                  <p class="projects-description description">Design</p>
+                </div>
+              </a>
             </li>
             <li class="projects-items">
-              <img
-                src="./images/project-6.jpg"
-                alt="project picture"
-                width="360"
-                height="300"
-              />
-              <div class="project-content">
-                <h3 class="projects-subtitle subtitle">Online Courses</h3>
-                <p class="projects-description description">Marketing</p>
-              </div>
+              <a href="#" class="projects-link">
+                <img
+                  src="./images/project-6.jpg"
+                  alt="project picture"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-content">
+                  <h3 class="projects-subtitle subtitle">Online Courses</h3>
+                  <p class="projects-description description">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="projects-items">
-              <img src="./images/project-7.jpg" alt="project picture"
-              width="360" height300" />
-              <div class="project-content">
-                <h3 class="projects-subtitle subtitle">
-                  Instagram Stories Concept
-                </h3>
-                <p class="projects-description description">Design</p>
-              </div>
+              <a href="#" class="projects-link">
+                <img src="./images/project-7.jpg" alt="project picture"
+                width="360" height300" />
+                <div class="project-content">
+                  <h3 class="projects-subtitle subtitle">
+                    Instagram Stories Concept
+                  </h3>
+                  <p class="projects-description description">Design</p>
+                </div>
+              </a>
             </li>
             <li class="projects-items">
-              <img
-                src="./images/project-8.jpg"
-                alt="project picture"
-                width="360"
-                height="300"
-              />
-              <div class="project-content">
-                <h3 class="projects-subtitle subtitle">Organic Food</h3>
-                <p class="projects-description description">Web Site</p>
-              </div>
+              <a href="" class="projects-link">
+                <img
+                  src="./images/project-8.jpg"
+                  alt="project picture"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-content">
+                  <h3 class="projects-subtitle subtitle">Organic Food</h3>
+                  <p class="projects-description description">Web Site</p>
+                </div>
+              </a>
             </li>
             <li class="projects-items">
-              <img
-                src="./images/project-9.jpg"
-                alt="project picture"
-                width="360"
-                height="300"
-              />
-              <div class="project-content">
-                <h3 class="projects-subtitle subtitle">Fresh Coffee</h3>
-                <p class="projects-description description">Web Site</p>
-              </div>
+              <a href="#" class="projects-link">
+                <img
+                  src="./images/project-9.jpg"
+                  alt="project picture"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-content">
+                  <h3 class="projects-subtitle subtitle">Fresh Coffee</h3>
+                  <p class="projects-description description">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -193,11 +213,46 @@
     </main>
     <footer class="footer">
       <div class="footer-container container">
-        <a href="/" class="footer-logo logo link"> <span>Web</span> Studio </a>
-        <p class="footer-description description">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-info">
+          <a href="/" class="footer-logo logo"> <span>Web</span> Studio </a>
+          <p class="footer-description description">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social">
+          <h4 class="footer-social-title">Social media</h4>
+          <ul class="footer-social-list list">
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-social-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-social-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-social-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-social-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
